syntax = "proto3";

option go_package = "genshin-grpc/proto/character";

package character;

import "proto/common/common.proto";

service CharacterService {
  rpc GetCharacter(GetCharacterRequest) returns (GetCharacterResponse) {}
  rpc StreamData(stream StreamRequest) returns (stream StreamResponse);
}

message GetCharacterRequest {
  string id = 1;
}

message GetCharacterResponse {
  repeated common.Character character = 1;
}

message StreamRequest {
  string message = 1;
}

message StreamResponse {
  string message = 1;
}